style: remove 7rem padding-top to fix 150px gap below sticky header

--- a/src/app/musteri-deneyimleri/page.module.css
+++ b/src/app/musteri-deneyimleri/page.module.css
@@ -1,7 +1,6 @@
 .pageContainer {
   min-height: 100vh;
   background-color: #fcfcfc;
-  padding-top: 7rem; /* Sabit header boşluğu eklendi */
 }
 
 /* HEADER AREA */
